--- a/templates/nxlog.conf.j2
+++ b/templates/nxlog.conf.j2
@@ -60,8 +60,8 @@ LogFile %ROOT%\data\nxlog.log
 
 <Output out_eventlog>
   Module     om_udp
-  Host       {{ syslog_server }}
-  Port       {{ syslog_port }}
+  Host       {{ os_syslog_server }}
+  Port       {{ os_syslog_port }}
   OutputType GELF
 </Output>
 
