--- a/templates/logrotate.conf.j2
+++ b/templates/logrotate.conf.j2
@@ -3,7 +3,7 @@
 weekly
 
 # keep 4 weeks worth of backlogs
-rotate {{ syslog_local_keep }}
+rotate {{ os_linux_syslog_local_keep }}
 
 # create new (empty) log files after rotating old ones
 create
