modified:   README.md 	modified:   defaults/main.yml 	modified:   tasks/Config/Linux.yml 	modified:   tasks/Config/Linux/RedHat/6/Rsyslog.yml 	modified:   tasks/Config/Linux/RedHat/7/Rsyslog.yml 	modified:   tasks/Config/Win32NT.yml 	modified:   templates/nxlog.conf.j2

--- a/templates/nxlog.conf.j2
+++ b/templates/nxlog.conf.j2
@@ -59,9 +59,9 @@ LogFile %ROOT%\data\nxlog.log
 </Input>
 
 <Output out_eventlog>
-  Module     om_{{ gelf_syslog_protocol }}
-  Host       {{ gelf_syslog_server | list | random }}
-  Port       {{ gelf_syslog_port }}
+  Module     om_{{ syslog_protocol }}
+  Host       {{ syslog_server | list | random }}
+  Port       {{ syslog_port }}
   OutputType GELF
 </Output>
 
