--- a/templates/ossec.conf.j2
+++ b/templates/ossec.conf.j2
@@ -37,190 +37,56 @@
     <ca_verification>{{ ossec_agent_config.active_response.ca_verification }}</ca_verification>
   </active-response>
 
-  {% if ossec_agent_config.rootcheck is defined %}
-  <rootcheck>
-    <disabled>no</disabled>
-    {% if ansible_system == "Linux" %}
-    <check_unixaudit>yes</check_unixaudit>
-    <check_files>yes</check_files>
-    <check_trojans>yes</check_trojans>
-    <check_dev>yes</check_dev>
-    <check_sys>yes</check_sys>
-    <check_pids>yes</check_pids>
-    <check_ports>yes</check_ports>
-    <check_if>yes</check_if>
-    <frequency>{{ ossec_agent_config.rootcheck.frequency }}</frequency>
-    <rootkit_files>/var/ossec/etc/shared/rootkit_files.txt</rootkit_files>
-    <rootkit_trojans>/var/ossec/etc/shared/rootkit_trojans.txt</rootkit_trojans>
-    <system_audit>/var/ossec/etc/shared/system_audit_rcl.txt</system_audit>
-    <system_audit>/var/ossec/etc/shared/system_audit_ssh.txt</system_audit>
-    {% if cis_distribution_filename is defined %}
-    <system_audit>/var/ossec/etc/shared/{{ cis_distribution_filename }}</system_audit>
-    {% endif %}
-    <skip_nfs>yes</skip_nfs>
-    {% endif %}
-
-    {% if ansible_system == "Win32NT" %}
-    <windows_audit>./shared/win_audit_rcl.txt</windows_audit>
-    <windows_apps>./shared/win_applications_rcl.txt</windows_apps>
-    <windows_malware>./shared/win_malware_rcl.txt</windows_malware>
-    {% endif %}
-  </rootcheck>
-  {% endif %}
-
-  {% if ossec_agent_config.syscheck is defined %}
-  <syscheck>
-    <disabled>no</disabled>
-    <frequency>{{ ossec_agent_config.syscheck.frequency }}</frequency>
-    {% if ansible_system == "Linux" %}
-    {% for directory in ossec_agent_config.syscheck.linux_directories %}
-    <directories check_all="yes" whodata="{% if directory.whodata is defined and directory.whodata == 'yes' %}yes{% else %}no{% endif %}">{{ directory.dirs }}</directories>
-    {% endfor %}
-    <auto_ignore>{{ ossec_agent_config.syscheck.auto_ignore }}</auto_ignore>
-    <scan_on_start>{{ ossec_agent_config.syscheck.scan_on_start }}</scan_on_start>
-    {% endif %}
-
-    {% if ansible_system == "Win32NT" %}
-    {% for directory in ossec_agent_config.syscheck.win_directories %}
-    <directories check_all="yes" whodata="{% if directory.whodata is defined and directory.whodata == 'yes' %}yes{% else %}no{% endif %}">{{ directory.dirs }}</directories>
-    {% endfor %}
-    {% endif %}
-
-    <!-- Files/directories to ignore -->
-    {% if ossec_agent_config.syscheck.linux_ignore is defined and ansible_system == "Linux" %}
-    {% for ignore in ossec_agent_config.syscheck.linux_ignore %}
-    <ignore>{{ ignore }}</ignore>
-    {% endfor %}
-    {% endif %}
-
-    {% if ossec_agent_config.syscheck.ignore is defined and ansible_system == "Win32NT" %}
-    {% for ignore in ossec_agent_config.syscheck.ignore_win %}
-    <ignore type="sregex">{{ ignore }}</ignore>
-    {% endfor %}
-    {% endif %}
-
-    {% if ansible_system == "Linux" %}
-    <!-- Files no diff -->
-    {% for no_diff in ossec_agent_config.syscheck.no_diff %}
-    <nodiff>{{ no_diff }}</nodiff>
-    {% endfor %}
-
-    <skip_nfs>{{ ossec_agent_config.syscheck.skip_nfs }}</skip_nfs>
-    {% endif %}
-    <!-- Remove not monitored files -->
-    <remove_old_diff>{{ ossec_agent_config.syscheck.remove_old_diff }}</remove_old_diff>
-
-    {% if ansible_system == "Linux"%}
-    <!-- Allow the system to restart Auditd after installing the plugin -->
-    <restart_audit>{{ ossec_agent_config.syscheck.restart_audit }}</restart_audit>
-    {% endif %} 
-
-    {% if ansible_system == "Win32NT" %}
-    {% for registry_key in ossec_agent_config.syscheck.windows_registry %}
-    {% if registry_key.arch is defined %}
-    <windows_registry arch="{{ registry_key.arch }}">{{ registry_key.key }}</windows_registry>
-    {% else %}
-    <windows_registry>{{ registry_key.key }}</windows_registry>
-    {% endif %}
-    {% endfor %}
-    {% endif %}
-
-    {% if ansible_system == "Win32NT" %}
-    {% for registry_key in ossec_agent_config.syscheck.windows_registry_ignore %}
-    {% if registry_key.type is defined %}
-    <registry_ignore type="{{ registry_key.type }}">{{ registry_key.key }}</registry_ignore>
-    {% else %}
-    <registry_ignore>{{ registry_key.key }}</registry_ignore>
-    {% endif %}
-    {% endfor %}
-    {% endif %}
-
-    {% if ansible_system == "Win32NT" %}
-    <!-- Frequency for ACL checking (seconds) -->
-    <windows_audit_interval>{{ ossec_agent_config.syscheck.win_audit_interval }}</windows_audit_interval>
-    {% endif %}
-  </syscheck>
-  {% endif %}
-
-  {% if ansible_system == "Linux" and ossec_agent_config.openscap.disable == 'no' %}
   <wodle name="open-scap">
-    <disabled>no</disabled>
+    <disabled>{{ ossec_agent_config.openscap.disable }}</disabled>
     <timeout>{{ ossec_agent_config.openscap.timeout }}</timeout>
     <interval>{{ ossec_agent_config.openscap.interval }}</interval>
     <scan-on-start>{{ ossec_agent_config.openscap.scan_on_start }}</scan-on-start>
-    {% if ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'xenial' %}
+{% if ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'xenial' %}
     <content type="xccdf" path="ssg-ubuntu-1604-ds.xml">
       <profile>xccdf_org.ssgproject.content_profile_common</profile>
     </content>
-    {% elif ansible_distribution == 'Debian' %}
-    {% if ansible_distribution_release == 'jessie' %}
-    {% if openscap_version_valid.stdout == "0" %}
+{% elif ansible_distribution == 'Debian' %}
+{% if ansible_distribution_release == 'jessie' %}
+{% if openscap_version_valid.stdout == "0" %}
     <content type="xccdf" path="ssg-debian-8-ds.xml">
       <profile>xccdf_org.ssgproject.content_profile_common</profile>
     </content>
     <content type="oval" path="cve-debian-8-oval.xml"/>
-    {% endif %}
-    {% elif ansible_distribution_release == 'stretch' %}
+{% endif %}
+{% elif ansible_distribution_release == 'stretch' %}
     <content type="oval" path="cve-debian-9-oval.xml"/>
-    {% endif %}
-    {% elif ansible_distribution == 'CentOS' %}
-      {% if ansible_distribution_major_version == '7' %}
-      <content type="xccdf" path="ssg-centos-7-ds.xml">
-      {% elif ansible_distribution_major_version == '6' %}
-      <content type="xccdf" path="ssg-centos-6-ds.xml">
-      {% endif %}
-        <profile>xccdf_org.ssgproject.content_profile_pci-dss</profile>
-        <profile>xccdf_org.ssgproject.content_profile_common</profile>
-      </content>
-    {% elif ansible_distribution == 'RedHat' %}
-      {% if ansible_distribution_major_version == '7' %}
-      <content type="xccdf" path="ssg-rhel-7-ds.xml">
-      {% elif ansible_distribution_major_version == '6' %}
-      <content type="xccdf" path="ssg-rhel-6-ds.xml">
-      {% endif %}
-        <profile>xccdf_org.ssgproject.content_profile_pci-dss</profile>
-        <profile>xccdf_org.ssgproject.content_profile_common</profile>
-      </content>
-      {% if ansible_distribution_major_version == '7' %}
-      <content type="oval" path="cve-redhat-7-ds.xml"/>
-      {% elif ansible_distribution_major_version == '6' %}
-      <content type="oval" path="cve-redhat-6-ds.xml"/>
-      {% endif %}
-    {% elif ansible_distribution == 'Fedora' %}
-      <content type="xccdf" path="ssg-fedora-ds.xml">
-        <profile>xccdf_org.ssgproject.content_profile_pci-dss</profile>
-        <profile>xccdf_org.ssgproject.content_profile_common</profile>
-      </content>
-    {% endif %}
+{% endif %}
+{% elif ansible_distribution == 'CentOS' %}
+{% if ansible_distribution_major_version == '7' %}
+    <content type="xccdf" path="ssg-centos-7-ds.xml">
+{% elif ansible_distribution_major_version == '6' %}
+    <content type="xccdf" path="ssg-centos-6-ds.xml">
+{% endif %}
+      <profile>xccdf_org.ssgproject.content_profile_pci-dss</profile>
+      <profile>xccdf_org.ssgproject.content_profile_common</profile>
+    </content>
+{% elif ansible_distribution == 'RedHat' %}
+{% if ansible_distribution_major_version == '7' %}
+    <content type="xccdf" path="ssg-rhel-7-ds.xml">
+{% elif ansible_distribution_major_version == '6' %}
+    <content type="xccdf" path="ssg-rhel-6-ds.xml">
+{% endif %}
+      <profile>xccdf_org.ssgproject.content_profile_pci-dss</profile>
+      <profile>xccdf_org.ssgproject.content_profile_common</profile>
+    </content>
+{% if ansible_distribution_major_version == '7' %}
+    <content type="oval" path="cve-redhat-7-ds.xml"/>
+{% elif ansible_distribution_major_version == '6' %}
+    <content type="oval" path="cve-redhat-6-ds.xml"/>
+{% endif %}
+{% elif ansible_distribution == 'Fedora' %}
+    <content type="xccdf" path="ssg-fedora-ds.xml">
+      <profile>xccdf_org.ssgproject.content_profile_pci-dss</profile>
+      <profile>xccdf_org.ssgproject.content_profile_common</profile>
+    </content>
+{% endif %}
   </wodle>
-  {% endif %}
-
-  <!-- Osquery integration -->
-  <wodle name="osquery">
-    <disabled>{{ ossec_agent_config.osquery.disable }}</disabled>
-    <run_daemon>{{ ossec_agent_config.osquery.run_daemon }}</run_daemon>
-    {% if ansible_os_family == "Windows" %}
-    <bin_path>{{ ossec_agent_config.osquery.bin_path_win }}</bin_path>
-    {% endif %}
-    <log_path>{% if ansible_os_family == "Windows" %}{{ ossec_agent_config.osquery.log_path_win }}{% else %}{{ ossec_agent_config.osquery.log_path }}{% endif %}</log_path>
-    <config_path>{% if ansible_os_family == "Windows" %}{{ ossec_agent_config.osquery.config_path_win }}{% else %}{{ ossec_agent_config.osquery.config_path }}{% endif %}</config_path>
-    <add_labels>{{ ossec_agent_config.osquery.add_labels }}</add_labels>
-  </wodle>
-
-  <!-- System inventory -->
-  <wodle name="syscollector">
-    <disabled>{{ ossec_agent_config.syscollector.disable }}</disabled>
-    <interval>{{ ossec_agent_config.syscollector.interval }}</interval>
-    <scan_on_start>{{ ossec_agent_config.syscollector.scan_on_start }}</scan_on_start>
-    <hardware>{{ ossec_agent_config.syscollector.hardware }}</hardware>
-    <os>{{ ossec_agent_config.syscollector.os }}</os>
-    <network>{{ ossec_agent_config.syscollector.network }}</network>
-    <packages>{{ ossec_agent_config.syscollector.packages }}</packages>
-    <ports all="no">{{ ossec_agent_config.syscollector.ports_no }}</ports>
-    <processes>{{ ossec_agent_config.syscollector.processes }}</processes>
-  </wodle>
-
-
 
   {% if ansible_system == "Linux" and ossec_agent_config.vuls.disable == 'no' %}
   <wodle name="command">
@@ -231,72 +97,6 @@
     <ignore_output>yes</ignore_output>
     <run_on_start>{{ ossec_agent_config.vuls.run_on_start }}</run_on_start>
   </wodle>
-  {% endif %}
-
-  <!-- Files to monitor (localfiles) -->
-    {% if ansible_system == "Linux" %}
-    {% for localfile in ossec_agent_config.localfiles.linux %}
-    <localfile>
-        <log_format>{{ localfile.format }}</log_format>
-    {% if localfile.format == 'command' or localfile.format == 'full_command' %}
-        <command>{{ localfile.command }}</command>
-        <frequency>{{ localfile.frequency }}</frequency>
-        {% if localfile.alias is defined %}
-          <alias>{{ localfile.alias }}</alias>
-        {% endif %}
-    {% else %}
-        <location>{{ localfile.location }}</location>
-    {% endif %}
-    </localfile>
-  {% endfor %}
-  {% endif %}
-
-    {% if ansible_os_family == "Debian" %}
-    {% for localfile in ossec_agent_config.localfiles.debian %}
-    <localfile>
-        <log_format>{{ localfile.format }}</log_format>
-    {% if localfile.format == 'command' or localfile.format == 'full_command' %}
-        <command>{{ localfile.command }}</command>
-        <frequency>{{ localfile.frequency }}</frequency>
-        {% if localfile.alias is defined %}
-          <alias>{{ localfile.alias }}</alias>
-        {% endif %}
-    {% else %}
-        <location>{{ localfile.location }}</location>
-    {% endif %}
-    </localfile>
-  {% endfor %}
-  {% endif %}
-
-    {% if ansible_os_family == "RedHat" %}
-    {% for localfile in ossec_agent_config.localfiles.centos %}
-    <localfile>
-        <log_format>{{ localfile.format }}</log_format>
-    {% if localfile.format == 'command' or localfile.format == 'full_command' %}
-        <command>{{ localfile.command }}</command>
-        <frequency>{{ localfile.frequency }}</frequency>
-        {% if localfile.alias is defined %}
-          <alias>{{ localfile.alias }}</alias>
-        {% endif %}
-    {% else %}
-        <location>{{ localfile.location }}</location>
-    {% endif %}
-    </localfile>
-  {% endfor %}
-  {% endif %}
-
-   {% if ansible_os_family == "Windows" %}
-   {% for localfile in ossec_agent_config.localfiles.windows %}
-    <localfile>
-        <log_format>{{ localfile.format }}</log_format>
-    {% if localfile.format == 'eventchannel' %}
-        <location>{{ localfile.location }}</location>
-        <query>{{ localfile.query}}</query>
-    {% else %}
-        <location>{{ localfile.location }}</location>
-    {% endif %}
-    </localfile>
-  {% endfor %}
   {% endif %}
 
 {% if ossec_agent_config.labels.enable %}
