modified:   tasks/Config/Linux/RedHat/6/Rsyslog.yml 	modified:   tasks/Config/Linux/RedHat/7/Rsyslog.yml 	modified:   templates/nxlog.conf.j2 	modified:   templates/ossec.conf.j2

--- a/templates/nxlog.conf.j2
+++ b/templates/nxlog.conf.j2
@@ -60,7 +60,7 @@ LogFile %ROOT%\data\nxlog.log
 
 <Output out_eventlog>
   Module     om_{{ syslog_protocol | lower }}
-  Host       {{ syslog_server | list | random }}
+  Host       {{ syslog_server | list | random(seed=inventory_hostname) }}
   Port       {{ syslog_port }}
   OutputType GELF
 </Output>
