--- a/templates/nxlog.conf.j2
+++ b/templates/nxlog.conf.j2
@@ -17,8 +17,11 @@ LogFile %ROOT%\data\nxlog.log
   SavePos      FALSE
   Exec         $enviornment = '{{ environments | default("ENV") | upper }}';
   Exec         $group = '{{ group_names[0] | default("GROUP") | upper }}';
-  Exec         $subscription = '{{ subscription | default("DEFAULT") | upper }}';
-  Exec         $region = '{{ region | default("DEFAULT") | upper }}';
+{% if tags is defined %}
+{% for key,value in tags.iteritems() %}
+  Exec         ${{ key }} = '{{ value }}';
+{% endfor %}
+{% endif %}
   Query <QueryList> \
     <Query Id="0"> \
       <Select Path="System">*</Select> \
