--- a/templates/ossec.conf.j2
+++ b/templates/ossec.conf.j2
@@ -79,6 +79,11 @@
   <labels>
     <label key="group">{{ group_names[0] | upper }}</label>
     <label key="environment">{{ environments | upper }}</label>
+{% if tags is defined %}
+{% for key,value in tags.iteritems() %}
+    <label key="{{ key }}">{{ value }}</label>
+{% endfor %}
+{% endif %}
   </labels>
 
 </ossec_config>
