modified:   README.md 	modified:   defaults/main.yml 	new file:   files/dellhw_exporter.service 	new file:   files/dellhw_exporter.tar.xz 	modified:   tasks/Exporter/Linux.yml 	modified:   tasks/Exporter/Linux/RedHat.yml 	new file:   tasks/Exporter/Linux/dellhw.yml 	modified:   tasks/Exporter/Linux/firewall.yml 	modified:   tasks/Exporter/Linux/register.yml 	modified:   tasks/Exporter/Linux/selinux.yml 	new file:   templates/dellhw_exporter.default.j2 	modified:   templates/netdata.conf.j2 	modified:   templates/node_exporter.j2 	modified:   vars/RedHat.yml

--- a/templates/netdata.conf.j2
+++ b/templates/netdata.conf.j2
@@ -8,6 +8,6 @@
     bind to = {{ ansible_default_ipv4.address }}
 
 [web]
-    default port = {{ netdata_port }}
+    default port = {{ os_linux_exporter_type_item.port }}
     web files owner = root
     web files group = netdata
