--- a/templates/netdata.conf.j2
+++ b/templates/netdata.conf.j2
@@ -1,13 +1,29 @@
 [global]
     run as user = netdata
-
-    # the default database size - 1 hour
-    history = 3600
-
-    # by default do not expose the netdata port
+    update every = 10
+    debug log = none
+    error log = none
+    access log = none
+    memory mode = ram
+    history = 600
     bind to = {{ ansible_default_ipv4.address }}
 
 [web]
     default port = {{ os_linux_exporter_type_item.port }}
+    enable gzip compression = no
     web files owner = root
     web files group = netdata
+
+[plugins]
+    proc = yes
+    tc = {{ netdata_collector.tc }}
+    idlejitter = {{ netdata_collector.idlejitter }}
+    cgroups = {{ netdata_collector.cgroups }}
+    checks = {{ netdata_collector.checks }}
+    apps = {{ netdata_collector.apps }}
+    charts.d = {{ netdata_collector.charts.d }}
+    node.d = {{ netdata_collector.node.d }}
+    python.d = {{ netdata_collector.python.d }}
+    plugins directory = /usr/libexec/netdata/plugins.d
+    enable running new plugins = no
+    check for new plugins every = 60
