--- a/templates/netdata.conf.j2
+++ b/templates/netdata.conf.j2
@@ -21,9 +21,9 @@
     cgroups = {{ netdata_collector.cgroups }}
     checks = {{ netdata_collector.checks }}
     apps = {{ netdata_collector.apps }}
-    charts.d = {{ netdata_collector.charts.d }}
-    node.d = {{ netdata_collector.node.d }}
-    python.d = {{ netdata_collector.python.d }}
+    charts.d = {{ netdata_collector.chartsd }}
+    node.d = {{ netdata_collector.noded }}
+    python.d = {{ netdata_collector.pythond }}
     plugins directory = /usr/libexec/netdata/plugins.d
     enable running new plugins = no
     check for new plugins every = 60
