modified:   tasks/Config/Linux/Environment.yml 	modified:   templates/resolv.conf.j2 	modified:   templates/scripts/Win32NT/os_info.j2

--- a/templates/resolv.conf.j2
+++ b/templates/resolv.conf.j2
@@ -6,3 +6,6 @@ search {{ os_dns_search }}
 nameserver {{ host }}
 {% endfor %}
 {% endif %}
+{% if os_linux_resolver_single_request | bool %}
+options timeout:2 rotate single-request single-request-reopen
+{% endif %}
