modified:   README.md 	modified:   defaults/main.yml 	modified:   meta/main.yml 	modified:   tasks/Exporter/Linux/register.yml 	modified:   tasks/Exporter/Win32NT/register.yml 	modified:   templates/ossec.conf.j2 	modified:   templates/rsyslog.conf.j2

--- a/templates/ossec.conf.j2
+++ b/templates/ossec.conf.j2
@@ -26,6 +26,8 @@
   <labels>
     <label key="group">{{ group_names[-1] | upper }}</label>
     <label key="environment">{{ environments | upper }}</label>
+    <label key="datacenter">{{ datacenter | lower }}</label>
+    <label key="domain">{{ domain | lower }}</label>
 {% if tags is defined %}
 {% for key,value in tags.iteritems() %}
     <label key="{{ key }}">{{ value }}</label>
