modified:   README.md 	modified:   tasks/Config/Linux/Environment.yml 	modified:   tasks/Config/Linux/RedHat/6/Rsyslog.yml 	modified:   tasks/Config/Linux/RedHat/6/Service.yml 	modified:   tasks/Config/Linux/RedHat/7/Service.yml 	modified:   tasks/Config/Linux/RedHat/Resource.yml 	modified:   tasks/Config/Linux/RedHat/User.yml 	modified:   tasks/Config/Win32NT/misc.yml 	modified:   tasks/Exporter/Linux/node.yml 	modified:   tasks/Exporter/Win32NT.yml 	modified:   tasks/Harden/Linux/RedHat/Audit.yml 	modified:   tasks/Harden/Linux/RedHat/Modules.yml 	modified:   tasks/Harden/Linux/RedHat/Security.yml 	modified:   tasks/Harden/Linux/RedHat/User.yml 	modified:   tasks/Harden/Win32NT/audit.yml 	modified:   tasks/Harden/Win32NT/password.yml 	modified:   tasks/Software/Win32NT.yml 	modified:   templates/ossec.conf.j2

--- a/templates/ossec.conf.j2
+++ b/templates/ossec.conf.j2
@@ -20,9 +20,9 @@
   </logging>
 
   <active-response>
-    <disabled>{{ ossec_agent_config.active_response.ar|default('no') }}</disabled>
-    <ca_store>{% if ansible_os_family == "Windows" %}{{ ossec_agent_config.active_response.ca_store_win }}{% else %}{{ ossec_agent_config.active_response.ca_store }}{% endif %}</ca_store>
-    <ca_verification>{{ ossec_agent_config.active_response.ca_verification }}</ca_verification>
+    <disabled>{{ ossec_agent_config.active_response | default('no') }}</disabled>
+    <ca_store>{% if ansible_os_family == "Windows" %}wpk_root.pem{% else %}/var/ossec/etc/wpk_root.pem{% endif %}</ca_store>
+    <ca_verification>yes</ca_verification>
   </active-response>
 
   <labels>
