modified:   templates/chrony.conf.j2

--- a/templates/chrony.conf.j2
+++ b/templates/chrony.conf.j2
@@ -22,7 +22,7 @@ rtcsync
 #minsources 2
 
 # Allow NTP client access from local network.
-#allow 192.168.0.0/16
+allow 127.0.0.0/8
 
 # Serve time even if not synchronized to a time source.
 local stratum 10
