--- a/templates/netdata.conf.j2
+++ b/templates/netdata.conf.j2
@@ -18,14 +18,14 @@
 
 [plugins]
     proc = yes
-    tc = {{ netdata_collector.tc }}
-    idlejitter = {{ netdata_collector.idlejitter }}
-    cgroups = {{ netdata_collector.cgroups }}
-    checks = {{ netdata_collector.checks }}
-    apps = {{ netdata_collector.apps }}
-    charts.d = {{ netdata_collector.chartsd }}
-    node.d = {{ netdata_collector.noded }}
-    python.d = {{ netdata_collector.pythond }}
+    tc = {{ os_netdata_collector.tc }}
+    idlejitter = {{ os_netdata_collector.idlejitter }}
+    cgroups = {{ os_netdata_collector.cgroups }}
+    checks = {{ os_netdata_collector.checks }}
+    apps = {{ os_netdata_collector.apps }}
+    charts.d = {{ os_netdata_collector.chartsd }}
+    node.d = {{ os_netdata_collector.noded }}
+    python.d = {{ os_netdata_collector.pythond }}
     plugins directory = /usr/libexec/netdata/plugins.d
     enable running new plugins = no
     check for new plugins every = 60
