--- a/templates/nxlog.conf.j2
+++ b/templates/nxlog.conf.j2
@@ -66,9 +66,9 @@ LogFile %ROOT%\data\nxlog.log
 </Input>
 
 <Output out_eventlog>
-  Module     om_{{ syslog_protocol | lower }}
-  Host       {{ syslog_server | list | random(seed=inventory_hostname) }}
-  Port       {{ syslog_port }}
+  Module     om_{{ os_syslog_protocol | lower }}
+  Host       {{ os_syslog_server | list | random(seed=inventory_hostname) }}
+  Port       {{ os_syslog_port }}
   OutputType GELF
 </Output>
 
