modified:   defaults/main.yml 	modified:   tasks/Exporter/Linux/register.yml 	modified:   tasks/Exporter/Win32NT/register.yml 	modified:   tasks/OSSec/Linux/configureation.yml 	modified:   tasks/OSSec/Win32NT/configureation.yml 	modified:   templates/nxlog.conf.j2 	modified:   templates/ossec.conf.j2 	modified:   templates/rsyslog.conf.j2

--- a/templates/ossec.conf.j2
+++ b/templates/ossec.conf.j2
@@ -26,7 +26,8 @@
   </active-response>
 
   <labels>
-    <label key="group">{{ group_names[-1] | upper }}</label>
+    <label key="project">{{ group_names[0] | title | regex_replace("_", "-") }}</label>
+    <label key="group">{{ group_names[-1] | title | regex_replace("_", "-") }}</label>
     <label key="environment">{{ environments | upper }}</label>
     <label key="datacenter">{{ datacenter | lower }}</label>
     <label key="domain">{{ domain | lower }}</label>
