--- a/templates/rsyslog.conf.j2
+++ b/templates/rsyslog.conf.j2
@@ -100,7 +100,8 @@ template(name="gelf" type="list") {
   constant(value="\"datacenter\":\"{{ datacenter | default("") | lower }}\",")
   constant(value="\"domain\":\"{{ domain | default("") | lower }}\",")
   constant(value="\"enviornment\":\"{{ environments | default("ENV") | upper }}\",")
-  constant(value="\"group\":\"{{ group_names[-1] | default("GROUP") | upper }}\",")
+  constant(value="\"project\":\"{{ group_names[0] | default("PROJECT") | title | regex_replace("_", "-") }}\",")
+  constant(value="\"group\":\"{{ group_names[-1] | default("GROUP") | title | regex_replace("_", "-") }}\",")
   constant(value="\"tag\":\"in_rsyslog\",")
   constant(value="\"host\":\"") property(name="hostname" caseConversion="upper")
   constant(value="\",\"short_message\":\"") property(name="msg" format="json")
