--- a/templates/nxlog.conf.j2
+++ b/templates/nxlog.conf.j2
@@ -16,7 +16,8 @@ LogFile %ROOT%\data\nxlog.log
   ReadFromLast FALSE
   SavePos      FALSE
   Exec         $enviornment = '{{ environments | default("ENV") | upper }}';
-  Exec         $group = '{{ group_names[-1] | default("GROUP") | upper }}';
+  Exec         $project = '{{ group_names[0] | default("PROJECT") | title | regex_replace("_", "-") }}';
+  Exec         $group = '{{ group_names[-1] | default("GROUP") | title | regex_replace("_", "-") }}';
 {% if tags is defined %}
 {% for key,value in tags.iteritems() %}
   Exec         ${{ key }} = '{{ value }}';
