--- a/templates/rsyslog.conf.j2
+++ b/templates/rsyslog.conf.j2
@@ -99,11 +99,12 @@ template(name="gelf" type="list") {
 {% endif %}
   constant(value="\"datacenter\":\"{{ datacenter | default("") | lower }}\",")
   constant(value="\"domain\":\"{{ domain | default("") | lower }}\",")
-  constant(value="\"enviornment\":\"{{ environments | default("ENV") | upper }}\",")
-  constant(value="\"project\":\"{{ group_names[0] | default("PROJECT") | title | regex_replace("_", "-") }}\",")
-  constant(value="\"group\":\"{{ group_names[-1] | default("GROUP") | title | regex_replace("_", "-") }}\",")
+  constant(value="\"enviornment\":\"{{ environments | default("prd") | lower }}\",")
+  constant(value="\"customer\":\"{{ customer | default("customer") | title | regex_replace("_", "-") }}\",")
+  constant(value="\"project\":\"{{ group_names[-1] | default("Project") | title | regex_replace("_", "-") }}\",")
+  constant(value="\"group\":\"{{ group_names[0] | default("Group") | title | regex_replace("_", "-") }}\",")
   constant(value="\"tag\":\"in_rsyslog\",")
-  constant(value="\"host\":\"") property(name="hostname" caseConversion="upper")
+  constant(value="\"host\":\"") property(name="hostname" caseConversion="lower")
   constant(value="\",\"short_message\":\"") property(name="msg" format="json")
   constant(value="\",\"timestamp\":") property(name="timereported" dateformat="unixtimestamp")
   constant(value=",\"level\":\"") property(name="syslogseverity")
