--- a/templates/ossec.conf.j2
+++ b/templates/ossec.conf.j2
@@ -1,7 +1,7 @@
 <ossec_config>
   <client>
     <server>
-      <address>{{ os_ossec_managers.address | list | random(seed=inventory_hostname) }}</address>
+      <address>{{ os_ossec_managers.address | list | random(seed=ansible_hostname) }}</address>
       <port>{{ os_ossec_managers.port }}</port>
       <protocol>{{ os_ossec_managers.protocol }}</protocol>
       <max_retries>5</max_retries>
