modified:   templates/scripts/Linux/os_info.j2

--- a/templates/scripts/Linux/os_info.j2
+++ b/templates/scripts/Linux/os_info.j2
@@ -5,7 +5,7 @@
 {% if ansible_system_vendor == "Microsoft Corporation" %}
 /bin/echo "os_info{model=\"`/sbin/dmidecode -s system-product-name`\",build=\"`/bin/cut -f1-4 -d" " /etc/{{ ansible_os_family | lower }}-release`\",release=\"`/bin/uname -r`\",sysname=\"Linux\",interface=\"{{ ansible_default_ipv4.interface }}\",vmsize=\"`curl -H Metadata:true --noproxy '*' 'http://169.254.169.254/metadata/instance/compute/vmSize?api-version=2021-01-01&format=text'`\"} 1"
 {% else %}
-/bin/echo "os_info{model=\"`/sbin/dmidecode -s system-product-name`\",build=\"`/bin/cut -f1-4 -d" " /etc/{{ ansible_os_family | lower }}-release`\",release=\"`/bin/uname -r`\",sysname=\"Linux\",interface=\"{{ ansible_default_ipv4.interface }}\",vmsize=\"\"} 1"
+/bin/echo "os_info{model=\"`/sbin/dmidecode -s system-product-name`\",build=\"`/bin/cut -f1-4 -d" " /etc/{{ ansible_os_family | lower }}-release`\",release=\"`/bin/uname -r`\",sysname=\"Linux\",interface=\"{{ ansible_default_ipv4.interface }}\",vmsize=\"`lscpu | sed -nr ':a;s/  / /;ta; /Model name/ s/.*: (.*) @ .*/\1/p' | sed 's/ CPU//; s/(R)//; s/(R)//'`\"} 1"
 {% endif %}
 
 exit 0
